frontend/K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend  # Sets Deployment name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 3a7jouokyffroregistry.azurecr.io/shpeeka/frontend:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80  # Exposes container port
          livenessProbe:  # check the container is ready
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe: # check the app is ready to serve
            httpGet:
              path: /index.html
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3     
          volumeMounts:
            - name: nginx
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf             
      imagePullSecrets:
      - name: docker-pull-secret    
      volumes:
        - name: nginx
          configMap:
            name: nginx
